--- a/foodOrderApp/index.html
+++ b/foodOrderApp/index.html
@@ -7,7 +7,7 @@
     <title>Food Order App</title>
   </head>
   <body>
-    <div class="overlays"></div>
+    <div id="overlays"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
