--- a/blogApp/index.html
+++ b/blogApp/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <!--    Google font Import-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lora:ital,wght@1,400;1,500;1,600;1,700&family=Varela&display=swap"
           rel="stylesheet">
+
+
+    <!-- ICONS LIBRARY FONTAWESOME PRO -->
+    <link
+            rel="stylesheet"
+            href="https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css"
+    />
+
+
     <title>Blog App</title>
 </head>
 <body>
